package CGCS.COM.ProyectoFinalSWIIISGCS.DTO;

import lombok.Data;

@Data
public class AdministrativoDTO {
    private Long idAdministrativo;
    private String nombres;
    private String apellidos;
    private String dni;
    private String telefono;
    private String email;
    private String cargo;

}
