@startuml
skinparam packageStyle rectangle

package CGCS.COM.ProyectoFinalSWIIISGCS.Domain <<Rectangle>> {
class Administrativo {
    -Long idAdministrativo
    -String nombres
    -String apellidos
    -String dni
    -String telefono
    -String email
    -String cargo
}

class Cita {
    -Long idCita
    -Date fechaHora
    -String descripcion
    -String estado
    -Doctor doctor
    -Paciente paciente
}

class Doctor {
    -Long idDoctor
    -String nombres
    -String apellidos
    -String dni
    -String telefono
    -String email
    List<Cita> citas
    Horario horario
    Set<Especialidad> especialidades
}

class Especialidad {
    -Long idEspecialidad
    -String nombre
    -String descripcion
    Set<Doctor> doctores
}

class HistorialMedico {
    -Long idHistorialMedico
    -String diagnostico
    -String alergias
    -String cirugias
    -String enfermedadesPrevias
    -String medicamentos
    -Paciente paciente
}

class Horario {
    -Long idHorario
    -LocalDate dia
    -LocalTime horaInicio
    -LocalTime horaFin
    List<Doctor> doctores
}

class Paciente {
    -Long idPaciente
    -String nombre
    -String apellido
    -String dni
    -String telefono
    -String email
    -Date fechaNacimiento
    -String direccion
    -String grupoSanguineo
    List<Cita> citas
    HistorialMedico historialMedico
}

Doctor "1" -- "0..*" Cita : asignado a >
Paciente "1" -- "0..*" Cita : programado >
Doctor "1" -- "*" Especialidad : especializado en >
Especialidad "*" -- "1" Doctor : incluye >
Paciente "1" -- "1" HistorialMedico : tiene >
Doctor "1" -- "1" Horario : sigue >

note right of Administrativo : Puede gestionar citas\ny pacientes indirectamente

}
@enduml
